--- a/css/style.css
+++ b/css/style.css
@@ -466,9 +466,9 @@ h1, h2, h3, h4, h5, h6, figure {
   .colorlib-work-featured .mobile-wrap .mobile-img {
     background-position: top;
     height: 730px;
-    -webkit-box-shadow: 0px 3px 38px -13px rgba(0, 0, 0, 0.2);
+    /* -webkit-box-shadow: 0px 3px 38px -13px rgba(0, 0, 0, 0.2);
     -moz-box-shadow: 0px 3px 38px -13px rgba(0, 0, 0, 0.2);
-    box-shadow: 0px 3px 38px -13px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 3px 38px -13px rgba(0, 0, 0, 0.2); */
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
     -ms-border-radius: 4px;
