--- a/css/style.css
+++ b/css/style.css
@@ -1484,3 +1484,28 @@ input[type="text"] {
 
 .js .animate-box {
   opacity: 0; }
+
+.countdown-box {
+    padding: 10px;
+    /* border-radius: 3px; */
+    /* background: #00BF96; */
+    color: #fff;
+    display: inline-block;
+}
+
+.countdown-box > span{
+  font: 70px/1em 'merriweather-bold', serif;
+  display: block;
+  padding: 12px 0 30px;
+  min-width: 25%;
+  float: left;
+  text-shadow: 0px 1px 3px rgba(0, 0, 0, .5);
+}
+
+.countdown-box > span > em {
+  font: 18px/18px 'montserrat-regular', sans-serif;
+  text-transform: uppercase;
+  letter-spacing: 1.5px;
+  margin-top: 12px;
+  display: block;
+}
